openshift/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fhir-streams
  labels:
    app: fhir-streams
    app.kubernetes.io/name: fhir-streams
spec:
  selector:
    app: fhir-streams
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
