openshift/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: fhir-streams
  labels:
    app: fhir-streams
    app.kubernetes.io/name: fhir-streams
spec:
  to:
    kind: Service
    name: fhir-streams
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
